css/style.css
html, body {
	margin: 0;
	padding: 0;
	height: 100%;
	width: 100%;
}

@-moz-keyframes spin {
    from { -moz-transform: rotate(0deg); }
    to { -moz-transform: rotate(360deg); }
}
@-webkit-keyframes spin {
    from { -webkit-transform: rotate(0deg); }
    to { -webkit-transform: rotate(360deg); }
}
@keyframes spin {
    from {transform:rotate(0deg);}
    to {transform:rotate(360deg);}
}

.loading {
	position: absolute;
	top: 50%;
	left: 50%;
	height: 40px;
	width: 40px;
	background: url(../img/spinner.png);
	animation: spin .75s linear infinite;
}

#landing {
	border-top: 5px solid white;
	background: url(../img/cell-phone-bg.png) no-repeat center center;
	background-size: cover;
}

.toggle-nav {
	display: none;
}

.splash > h2 {
	color: white;
	font-family: 'Montserrat', sans-serif;
}

.splash {
	width: 100%;
	position: absolute;
	top: 50%;
	height:50px;
	margin-top:-25px;
}

.splash-about {
	margin-top: 70px;
	width: 100%;
	position: relative;
	height:100%;
}

.splash-about-box {
	width: 100%;
	max-width: 500px;
	height: 500px;
	position: absolute;
  top: 50%;
  left: 50%;
	transform: translate(-50%, -50%);
	border-radius: 5px;
	padding: 20px;
	background: white;
	font-family: 'Montserrat', sans-serif;
}

#brand-logo {
	display: inline;
	width: 192px;
}

#main-nav{
	border-top: 5px solid white;
	width: 100%;
	margin: 0 auto;
	height: 70px;
	line-height: 70px;
}

#main-nav ul {
	float: right;
}

#main-nav ul li{
	padding: 0 7px;
	display: inline-block;
}

#main-nav ul li a {
	color: white;
	padding: 10px;
	font-family: 'Montserrat', sans-serif;
}

.active-page {
	border-bottom: 2px solid white;
}

.active-page a:hover {
	text-decoration: none;
}

#main-nav ul li:not(.active-page) a:hover {
	background: rgba(255, 255, 255, 0.25);
	text-decoration: none;
	padding: 8px;
	border: 2px solid white;
	border-radius: 5px;
}

#map {
	border-radius: 25px;
	position: absolute;
	height: 500px;
	width: 750px;
	max-width: 90%;
	max-height: 75%;
	z-index: 5;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	-webkit-transform: -webkit-translate(-50%, -50%);
}

#main-nav > ul > .register > a {
	background: rgba(0, 219, 0, 0.55);
	text-decoration: none;
	padding: 8px;
	border: 2px solid white;
	border-radius: 5px;
}

#main-nav > ul > .login > a {
	text-decoration: none;
	padding: 8px;
	border: 2px solid white;
	border-radius: 5px;
}

#footer {
	width: 100%;
	height: 200px;
	background-color: black;
	margin: 0;
	padding: 0;
	overflow: hidden;
	position: absolute;
}

#footer-top {
	height: 150px;
	width: 100%;
	margin: 0;
	padding: 0;
}

#footer-bottom {
	background-color: #222;
	width: 100%;
	margin: 0;
	padding: 0;
	bottom:0;
}

#footer-bottom > p{
	color: white;
	line-height: 50px;
}

#footer-nav {
	text-align: center;
	width: 100%;
	margin: 0 auto;
}

#footer-nav li {
	line-height: 150px;
	padding: 0 25px;
	display: inline-block;
}

#footer-nav li a{
	color: white;
	font-family: 'Montserrat', sans-serif;
}

#footer-nav li a:hover{
	text-decoration: none;
}

.container-full{
	height: 100%;
	margin-top: -70px;
}

.splash-subtext {
	font-family: 'Cardo', serif;
	color: white;
}

.input {
	padding-top: 25px;
	max-width: 75%;
	width:450px;
  display: flex;
  align-items: center;
	margin: 0 auto;
}


.button {
  height: 44px;
  border: none;
}


#email {
  width: 75%;
  background: #FDFCFB;
  font-family: inherit;
  color: #737373;
  letter-spacing: 1px;
  text-indent: 5%;
  border-radius: 5px 0 0 5px;
}


#submit {
  width: 25%;
  height: 46px;
  background: rgba(0, 219, 0, 0.55);
  font-family: inherit;
  font-weight: bold;
  color: white;
  letter-spacing: 1px;
  border-radius: 0 5px 5px 0;
  cursor: pointer;
  transition: background .3s ease-in-out;
}


#submit:hover {
  background: rgba(0, 219, 0, 0.85);
}


input:focus {
  outline: none;
  outline: 2px solid rgba(0, 219, 0, 0.85);
  box-shadow: 0 0 2px #E86C8D;
}

#registration {
	margin: 50px auto;
	width: 300px;
	height: 100%;
	text-align: center;
}

#registration input {
	line-height: 30px;
	width: 250px;
	letter-spacing: 1px;
	text-align: left;
	letter-spacing: 1px;
  text-indent: 5%;
}

#registration input:nth-of-type(5) {
	text-align: center;
	text-indent: 0;
	background: ;
}

.sign-up-button {
  position: relative;
  vertical-align: top;
  width: 100%;
  height: 45px;
  padding: 0;
  font-size: 22px;
  color: white;
  text-align: center;
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
  background: rgba(0, 219, 0, 0.55);
  border: 0;
  border-bottom: 2px solid #fff;
  border-radius: 5px;
  cursor: pointer;
  -webkit-box-shadow: inset 0 -2px #040;
  box-shadow: inset 0 -2px #040;
}

.sign-up-button:active {
  top: 1px;
  outline: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}



/*

Mobile Styling!

*/

@media (max-width: 750px) {
	#main-nav > ul > li:nth-child(1){
		display: none;
	}
}

@media (max-width: 670px) {
	#main-nav > ul > li:nth-child(2){
		display: none;
	}
}

@media (max-width: 650px) {

	#brand-logo img {
		display: block;
		margin: 0 auto;
	}

	#submit {
		font-size: 12px;
	}

	.active-page {
		border-bottom: none;
	}

	#main-nav ul li a:hover {
		background: rgba(255, 255, 255, 0.25);
		text-decoration: none;
		padding: 8px;
		border: 2px solid white;
		border-radius: 5px;
	}

	#main-nav > ul > li:nth-child(-n+2){
		display: block;
	}

	#main-nav ul.active {
		top: 0;
		left: 0;
		height: 100%;
		padding-top: 70px;
		overflow: hidden;
		position:absolute;
		display:inline-block;
		z-index: 10;
		border-radius: 0px;
	}

	#main-nav ul {
		display:none;
	}

	#main-nav ul {
		width:100%;
		position:absolute;
		top:120%;
		left:0px;
		padding:10px 18px;
		box-shadow:0px 1px 1px rgba(0,0,0,0.15);
		border-radius:3px;
		background: rgba(0, 0, 0, 0.85);
	}

	#main-nav ul li {
		line-height: 75px;
		margin:5px 0px;
		float:none;
		display:block;
		text-align: center;
		font-size: 36px;
	}

	#main-nav > ul > .register > a,
	#main-nav > ul > .login > a {
		background: none;
		text-decoration: none;
		border: 1px;
		padding: 10px;
	}

	#main-nav a {
		display:block;
	}

	.splash > h2 {
		font-size: 20px;
	}

	.splash-about-box {
		margin: 0;
		border-radius: 0;
		height: 100%;
	}

	.toggle-nav {
		z-index: 20;
		position: absolute;
		top: 0;
		right: 0;
		line-height: 70px;
		padding: 0 15px;
		color: white;
		font-size: 30px;
		float: right;
		display: inline-block;
	}

	.toggle-nav:matches(:hover, :active, :focus) {
		color:white;
		text-decoration: none;
	}

	#footer {
		height: 150px;
	}

	#footer-top {
		height: 100px;
	}

	#footer-nav {
		width: 100%;
	}
	#footer-nav > li {
		line-height: 25px;
		text-align: center;
		list-style: none;
		display: list-item;
		margin-left: -35px;
	}

}

